--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,20 @@
     <string name="app_name">Best Movies</string>
 
 <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to Settings -->
+    <string name="pref_search_title">Search Preference</string>
+    <string name="pref_search_key" translatable="false">search</string>
+    <array name="pref_search_entries">
+        <item>By Popularity</item>
+        <item>By Highest Ratings</item>
+    </array>
+    <array name="pref_search_values" translatable="false">
+        <item>popularity.desc</item>
+        <item>vote_average.desc</item>
+    </array>
+    <string name="pref_search_default" translatable="false">popularity.desc</string>
+
 </resources>
