Feature: Created MovieProvider for fetching online content
Create MoviesContract & MovieProvider classes
For now, we fetch info online and create ad-hoc Cursor
Created 2 associated tests with basic tests

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,13 @@
         <item>By Highest Ratings</item>
     </array>
     <array name="pref_search_values" translatable="false">
-        <item>popularity.desc</item>
-        <item>vote_average.desc</item>
+        <item>@string/pref_search_popularity</item>
+        <item>@string/pref_search_vote_average</item>
     </array>
+    <string name="pref_search_popularity" translatable="false">popularity.desc</string>
+    <string name="pref_search_vote_average" translatable="false">vote_average.desc</string>
     <string name="pref_search_default" translatable="false">popularity.desc</string>
+
+    <string name="content_authority" translatable="false">com.example.android.bestmovies.app</string>
 
 </resources>
