--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">Best Movies</string>
 
-<!-- TODO: Remove or change this placeholder text -->
     <string name="action_settings">Settings</string>
     <string name="title_activity_settings">Settings</string>
+
+    <string name="review_section_title">Review</string>
+    <string name="review_noreviews_message">No reviews available</string>
 
     <!-- Strings related to Settings -->
     <string name="pref_search_title">Search Preference</string>
