--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="trailers_section_title">Trailers</string>
     <string name="trailers_notrailers_message">No trailers available</string>
     <string name="trailers_play_content_desc">Play this trailer</string>
+    <string name="grid_load_more">Load more</string>
+    <string name="grid_loading_desc">Loading…</string>
 
     <!-- Strings related to Settings -->
     <string name="pref_search_title">Search Preference</string>
