Feature: image data saved offline when added to favorite
Created a FileProvider to support file saving and retrieval
updated movie provider to downlaod and save image on insert
and erase image(s) on delete
Had to create an AsyncQueryHandler to handle delete and insert requests

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="pref_search_favorite" translatable="false">favorite</string>
     <string name="pref_search_default" translatable="false">popularity.desc</string>
 
-    <string name="content_authority" translatable="false">com.example.android.bestmovies.app</string>
+    <string name="provider_paths_name">images</string>
+    <string name="provider_paths_path">poster_images/</string>
 
 </resources>
